# Commander_Chess

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml
commander_chess/: __init__.py  app.py  bootstrap.py  env.py  game_state.py  llm.py  main.py  player_auth.py  prompt.py  schemas.py  session_store.py  turn_runner.py
commander_chess/chess/: board.py  moves.py
commander_chess/memory/: commander_orders.py
deploy/: Caddyfile.example  commander-chess.service
static/: app.js  index.html  style.css
tests/: test_api.py  test_commander_memory.py  test_llm.py  test_special_moves.py
