[project]
name = "commander-chess"
version = "0.2.0"
description = "Commander Chess — a Realm Fabric demo: you command pieces, they choose moves"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "realm-fabric>=0.7.1,<0.8",
    "python-chess>=1.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[project.scripts]
commander-chess = "commander_chess.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commander_chess"]

[tool.uv]
package = true
